# codex-profile-manager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/: codex-service.ts  main.ts  preload.ts
release/: Codex Profile Switcher_0.2.0_x64_en-US.msi  Codex Profile Switcher_1.0.0_x64_en-US.msi
shared/: contracts.ts
src/: App.tsx  api.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/components/: ProfileDetailModal.tsx  ProfileEditorModal.tsx
src/utils/: profile-ui.ts
